--- a/Presentation/DreamLuso.Angular/src/app/components/front-office/Pages/login/login.component.html
+++ b/Presentation/DreamLuso.Angular/src/app/components/front-office/Pages/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="relative bg-gray-100 font-inter">
   <div class="grid grid-cols-12 relative">
     <!-- Seção de fundo com imagem -->
-    <div class="relative col-span-6 grid h-full bg-cover bg-center" style="background-image: url('https://images.pexels.com/photos/2565222/pexels-photo-2565222.jpeg');">
+    <div class="relative col-span-6 grid h-screen bg-cover bg-center" style="background-image: url('https://images.pexels.com/photos/2640604/pexels-photo-2640604.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
       <div class="absolute w-full bottom-0 left-0 p-20 bg-gradient-to-t from-neutral-900/70">
         <h1 class="text-6xl font-bold text-white pt-44">Welcome back to<br><span class="text-white">DreamLuso</span></h1>
         <p class="mt-4 text-xl leading-relaxed text-white">
@@ -72,4 +72,11 @@
       </div>
     </div>
   </div>
+
+    <!-- Botão Home -->
+    <a href="/" class="fixed bottom-8 right-8 bg-blue-600 hover:bg-blue-700 text-white rounded-full p-4 shadow-lg transition duration-300 ease-in-out">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+      </svg>
+    </a>
 </section>
